[package]
name = "_douglasduteil_learnrust"
version = "0.1.10"
authors = ["Douglas Duteil <douglasduteil@gmail.com>"]
build = "build.rs"
description = "Learning Rust"
include = ["exercices"]
keywords = ["git", "log", "changelog", "parser", "parse"]
license = "WTFPL"
repository = "https://github.com/douglasduteil/learnrust"

[[bin]]
name = "learnrust"
path = "src/main.rs"
test = false
doc = false

[dependencies]
workshopper = { path = "workshopper" }
phf = "0.7.12"
includedir = "0.2.0"

[dependencies.cursive]
version = "0"
default-features = false
features = ["pancurses"]

[build-dependencies]
includedir_codegen = "0.2.0"

[dev-dependencies]
clog-cli = "0.9.3"

[workspace]
